# sparklib

./: .gitignore  README.md  pyproject.toml
src/sparklib/: __init__.py  cli.py  core.py
src/sparklib/utils/aesthetics/: __init__.py  palettes.py
src/sparklib/utils/logging/: __init__.py  core.py  decorators.py
src/sparklib/utils/management/: __init__.py  archive.py  core.py
